--- a/PalmerPenguinsAnalysis.qmd
+++ b/PalmerPenguinsAnalysis.qmd
@@ -9,7 +9,7 @@ execute:
 
 ## Quarto
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
+Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>. This is my first commit.
 
 ## Running Code
 
